# Xietiao

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: app.rs  config.rs  main.rs  model.rs  todoist.rs  ui.rs
