[package]
name = "xietiao"
version = "0.1.0"
edition = "2021"
description = "Xietiao — un dashboard TUI para proyectos, to-dos, notas, calendario y pomodoro"
license = "MIT"
repository = "https://github.com/Shikillo/Xietiao"
readme = "README.md"
keywords = ["tui", "productivity", "pomodoro", "todo", "dashboard"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
